blocks overlapping header issue solved

--- a/src/app/core/components/nav-bar/nav-bar.component.scss
+++ b/src/app/core/components/nav-bar/nav-bar.component.scss
@@ -15,7 +15,7 @@
   background: whitesmoke;
   color: black;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 // .mat-toolbar {
